--- a/dinheironapalma/src/app/globals.css
+++ b/dinheironapalma/src/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn-primary {
+    @apply bg-purple-700 rounded-full px-0.5 py-0.5 text-white text-sm text-center;
+  }
+  .btn-secondary {
+    @apply bg-zinc-700 rounded-full px-4 py-2 text-white text-sm text-center;
+  }
+  .btn-danger {
+    @apply bg-red-700 rounded-full px-4 py-2 text-white text-sm text-center;
+  }
+}
