--- a/dinheironapalma/src/app/globals.css
+++ b/dinheironapalma/src/app/globals.css
@@ -3,13 +3,22 @@
 @tailwind utilities;
 
 @layer components {
+  .btn {
+    @apply rounded-full text-white text-sm text-center transition flex items-center justify-between;
+  }
+
   .btn-primary {
-    @apply bg-purple-700 rounded-full px-0.5 py-0.5 text-white text-sm text-center;
+    @apply btn p-0.5;
+    @apply bg-purple-700 hover:bg-purple-600;
   }
+
   .btn-secondary {
-    @apply bg-zinc-700 rounded-full px-4 py-2 text-white text-sm text-center;
+    @apply btn px-4 py-2;
+    @apply bg-zinc-700 hover:bg-zinc-600;
   }
+
   .btn-danger {
-    @apply bg-red-700 rounded-full px-4 py-2 text-white text-sm text-center;
+    @apply btn px-4 py-2;
+    @apply bg-red-700 hover:bg-red-600;
   }
 }
